; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_frontend.c_agpioc_deallocate_wrap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_frontend.c_agpioc_deallocate_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_file_private = type { i32 }
%struct.agp_memory = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @agpioc_deallocate_wrap(%struct.agp_file_private* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.agp_file_private*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.agp_memory*, align 8
  store %struct.agp_file_private* %0, %struct.agp_file_private** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = call i32 @DBG(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.agp_memory* @agp_find_mem_by_key(i32 %8)
  store %struct.agp_memory* %9, %struct.agp_memory** %6, align 8
  %10 = load %struct.agp_memory*, %struct.agp_memory** %6, align 8
  %11 = icmp eq %struct.agp_memory* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %18

15:                                               ; preds = %2
  %16 = load %struct.agp_memory*, %struct.agp_memory** %6, align 8
  %17 = call i32 @agp_free_memory_wrap(%struct.agp_memory* %16)
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @DBG(i8*) #1

declare dso_local %struct.agp_memory* @agp_find_mem_by_key(i32) #1

declare dso_local i32 @agp_free_memory_wrap(%struct.agp_memory*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
